--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,53 @@
-.center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 70vh;
-}
+body {
+    background-color: sandybrown;
+        margin: 0;
+        padding: 0;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .center {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+    }
+    
+    h1 {
+        justify-content: center;
+    }
+    
+    img {
+        display: block;
+        margin: auto;
+    }
+    
+   
+    
+    #top-left {
+        height: 100%;
+        display: flex;
+        align-items: left;
+    }
+    
+    #top-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    
+    #bottom-left {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+    
+    #bottom-right {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    
+   
