--- a/css/index.css
+++ b/css/index.css
@@ -24,12 +24,18 @@ body {
         margin: auto;
     }
     
+    .container {
+        position: relative;
+        flex-grow: 2;
+        width: 100%;
+        height: 100%;
+    }
    
     
     #top-left {
-        height: 100%;
-        display: flex;
-        align-items: left;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
     
     #top-right {
