--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body {
         justify-content: center;
         align-items: center;
         flex-grow: 1;
+        position: relative;
     }
     
     h1 {
@@ -25,7 +26,7 @@ body {
     }
     
     .container {
-        position: relative;
+        position: absolute;
         flex-grow: 2;
         width: 100%;
         height: 100%;
