--- a/css/index.css
+++ b/css/index.css
@@ -18,11 +18,14 @@ body {
     
     h1 {
         justify-content: center;
+        position: relative;
+        top: 30%;
     }
     
     img {
         display: block;
         margin: auto;
+        border: 3px solid
     }
     
     .container {
