--- a/css/chickenparm.css
+++ b/css/chickenparm.css
@@ -19,3 +19,19 @@ h1 {
 img {
     border: solid 2px;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+
+h2 {
+    display: flex;
+    justify-content: center;
+    border-bottom: solid 2px;
+}
