fixed steps width (fixed text run off)

--- a/css/chickenparm.css
+++ b/css/chickenparm.css
@@ -23,12 +23,12 @@ img {
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    position: relative;
 }
 
-
+.steps {
+    max-width: 600px;
+  }
 
 h2 {
     display: flex;
