aligned steps x desc width to 500px ti match img

--- a/css/chickenparm.css
+++ b/css/chickenparm.css
@@ -27,8 +27,13 @@ img {
 }
 
 .steps {
-    max-width: 600px;
+    max-width: 500px;
   }
+
+
+.description{
+    max-width: 500px;
+}
 
 h2 {
     display: flex;
